更新ali库版本

--- a/lib_device_add/dependency.gradle
+++ b/lib_device_add/dependency.gradle
@@ -22,7 +22,8 @@ dependencies {
     api 'com.aliyun.iot.aep.sdk:sdk-framework:0.1.7.7'
     implementation 'com.aliyun.ams:alicloud-android-utdid:1.1.5.3'
     implementation 'com.aliyun.alink.linksdk:api-client-biz:1.0.3'
-    implementation 'com.aliyun.iot.aep.sdk:connectchannel:0.1.5'
+    implementation ('com.aliyun.iot.aep.sdk:connectchannel:0.1.5'){ exclude module: 'public-channel-mobile' }
+    implementation ('com.aliyun.alink.linksdk:public-channel-mobile:1.5.2.3')
     implementation 'com.aliyun.iot.aep.sdk:iot-credential:0.0.2.9'
     implementation 'com.aliyun.iot.sdk:account-oa-ui:0.1.8.2'
     implementation 'com.aliyun.alink.linksdk:ilop-devicecenter-ext-boneplugin:1.5.1'
